more demo icons

--- a/demo/index.html
+++ b/demo/index.html
@@ -267,6 +267,99 @@
             <game-icon author="delapouite" path="briefcase"></game-icon>
             <game-icon author="delapouite" path="broken-pottery"></game-icon>
             <game-icon author="delapouite" path="broken-wall"></game-icon>
+            <game-icon author="delapouite" path="broom"></game-icon>
+            <game-icon author="delapouite" path="bulldozer"></game-icon>
+            <game-icon author="delapouite" path="buoy"></game-icon>
+            <game-icon author="delapouite" path="butterfly-knife"></game-icon>
+            <game-icon author="delapouite" path="button-finger"></game-icon>
+            <game-icon author="delapouite" path="buy-card"></game-icon>
+            <game-icon author="delapouite" path="cactus"></game-icon>
+            <game-icon author="delapouite" path="cadillac-helm"></game-icon>
+            <game-icon author="delapouite" path="caduceus"></game-icon>
+            <game-icon author="delapouite" path="caesar"></game-icon>
+            <game-icon author="delapouite" path="cage"></game-icon>
+            <game-icon author="delapouite" path="calavera"></game-icon>
+            <game-icon author="delapouite" path="calendar"></game-icon>
+            <game-icon author="delapouite" path="caltrops"></game-icon>
+            <game-icon author="delapouite" path="camargue-cross"></game-icon>
+            <game-icon author="delapouite" path="cambodia"></game-icon>
+            <game-icon author="delapouite" path="camel-head"></game-icon>
+            <game-icon author="delapouite" path="camping-tent"></game-icon>
+            <game-icon author="delapouite" path="candles"></game-icon>
+            <game-icon author="delapouite" path="candlestick-phone"></game-icon>
+            <game-icon author="delapouite" path="candy-canes"></game-icon>
+            <game-icon author="delapouite" path="canoe"></game-icon>
+            <game-icon author="delapouite" path="cape"></game-icon>
+            <game-icon author="delapouite" path="car-key"></game-icon>
+            <game-icon author="delapouite" path="car-wheel"></game-icon>
+            <game-icon author="delapouite" path="caravan"></game-icon>
+            <game-icon author="delapouite" path="card-burn"></game-icon>
+            <game-icon author="delapouite" path="card-exchange"></game-icon>
+            <game-icon author="delapouite" path="card-joker"></game-icon>
+            <game-icon author="delapouite" path="cardboard-box"></game-icon>
+            <game-icon author="delapouite" path="carnival-mask"></game-icon>
+            <game-icon author="delapouite" path="carnivorous-plant"></game-icon>
+            <game-icon author="delapouite" path="carrot"></game-icon>
+            <game-icon author="delapouite" path="castle-ruins"></game-icon>
+            <game-icon author="delapouite" path="castle"></game-icon>
+            <game-icon author="delapouite" path="cavalry"></game-icon>
+            <game-icon author="delapouite" path="cave-entrance"></game-icon>
+            <game-icon author="delapouite" path="cctv-camera"></game-icon>
+            <game-icon author="delapouite" path="ceiling-barnacle"></game-icon>
+            <game-icon author="delapouite" path="ceiling-light"></game-icon>
+            <game-icon author="delapouite" path="chainsaw"></game-icon>
+            <game-icon author="delapouite" path="chalk-outline-murder"></game-icon>
+            <game-icon author="delapouite" path="charging-bull"></game-icon>
+            <game-icon author="delapouite" path="checkered-flag"></game-icon>
+            <game-icon author="delapouite" path="chef-toque"></game-icon>
+            <game-icon author="delapouite" path="cherish"></game-icon>
+            <game-icon author="delapouite" path="cherry"></game-icon>
+            <game-icon author="delapouite" path="chest"></game-icon>
+            <game-icon author="delapouite" path="chicken"></game-icon>
+            <game-icon author="delapouite" path="chili-pepper"></game-icon>
+            <game-icon author="delapouite" path="chips-bag"></game-icon>
+            <game-icon author="delapouite" path="church"></game-icon>
+            <game-icon author="delapouite" path="cigar"></game-icon>
+            <game-icon author="delapouite" path="cigarette"></game-icon>
+            <game-icon author="delapouite" path="city-car"></game-icon>
+            <game-icon author="delapouite" path="clapperboard"></game-icon>
+            <game-icon author="delapouite" path="closed-barbute"></game-icon>
+            <game-icon author="delapouite" path="closed-doors"></game-icon>
+            <game-icon author="delapouite" path="clownfish"></game-icon>
+            <game-icon author="delapouite" path="coal-wagon"></game-icon>
+            <game-icon author="delapouite" path="cobra"></game-icon>
+            <game-icon author="delapouite" path="coffee-beans"></game-icon>
+            <game-icon author="delapouite" path="coffee-cup"></game-icon>
+            <game-icon author="delapouite" path="coins"></game-icon>
+            <game-icon author="delapouite" path="coliseum"></game-icon>
+            <game-icon author="delapouite" path="colombia"></game-icon>
+            <game-icon author="delapouite" path="colombian-statue"></game-icon>
+            <game-icon author="delapouite" path="compact-disc"></game-icon>
+            <game-icon author="delapouite" path="companion-cube"></game-icon>
+            <game-icon author="delapouite" path="computer-fan"></game-icon>
+            <game-icon author="delapouite" path="concrete-bag"></game-icon>
+            <game-icon author="delapouite" path="confrontation"></game-icon>
+            <game-icon author="delapouite" path="congress"></game-icon>
+            <game-icon author="delapouite" path="conqueror"></game-icon>
+            <game-icon author="delapouite" path="convict"></game-icon>
+            <game-icon author="delapouite" path="convince"></game-icon>
+            <game-icon author="delapouite" path="cooking-pot"></game-icon>
+            <game-icon author="delapouite" path="corn"></game-icon>
+            <game-icon author="delapouite" path="coronation"></game-icon>
+            <game-icon author="delapouite" path="corporal"></game-icon>
+            <game-icon author="delapouite" path="corset"></game-icon>
+            <game-icon author="delapouite" path="cotton-flower"></game-icon>
+            <game-icon author="delapouite" path="covered-jar"></game-icon>
+            <game-icon author="delapouite" path="cow"></game-icon>
+            <game-icon author="delapouite" path="cowboy-boot"></game-icon>
+            <game-icon author="delapouite" path="cowboy-holster"></game-icon>
+            <game-icon author="delapouite" path="crane"></game-icon>
+            <game-icon author="delapouite" path="cricket"></game-icon>
+            <game-icon author="delapouite" path="crime-scene-tape"></game-icon>
+            <game-icon author="delapouite" path="croissant"></game-icon>
+            <game-icon author="delapouite" path="cross-shield"></game-icon>
+            <game-icon author="delapouite" path="crosshair"></game-icon>
+            <game-icon author="delapouite" path="crow-nest"></game-icon>
             
           </div>
         </template>
